# cosmetics-shelf-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py  routes.py
app/providers/: __init__.py  base.py  batch_rules.py  official_search.py  open_beauty_facts.py  page_metadata.py  sephora.py
app/services/: brand.py  category.py  ids.py  product_lookup.py  ranking.py
examples/: curl.sh
tests/: test_batch_rules.py  test_official_search.py  test_product_lookup_service.py  test_ranking.py  test_routes.py  test_sephora_provider.py
